# Project_artemis_EDR

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run_server.py  settings.example.json  settings.json  test_events.py
audit-logs/pentest/deliverables/: pre_recon_deliverable.md
config/: sysmon-config.xml
data/process_monitor/: alerts.jsonl  events.jsonl
data/risk/: score_history.jsonl
data/threat_intel/: state.json
data/timeline/: events.jsonl
docs/: DASHBOARD_IMPROVEMENTS.md  EDR_MODULE.md  SHANNON_INTEGRATION_PLAN.md
scripts/: Forward-SysmonEvents.ps1
src/artemis/: __init__.py  cli.py  core.py  llm.py  models.py
src/artemis/agent/: __init__.py  analyzer.py  autonomous.py  daemon.py  discovery.py  endpoint.py  events.py  fingerprint.py  monitor.py  network.py  remediation.py  responder.py  scanner.py  telemetry.py  traffic.py
src/artemis/edr/: __init__.py  process_monitor.py  response.py  risk_score.py  sysmon.py  threat_intel.py  timeline.py
src/artemis/generators/: __init__.py  base.py  kql.py  sigma.py  snort.py  splunk.py  yara.py
src/artemis/pentest/: __init__.py  agents.py  exploit_agents.py  pipeline.py  recon.py  report.py  tools.py  vuln_agents.py
src/artemis/redteam/: __init__.py  controller.py  shannon.py
src/artemis/validators/: __init__.py
src/artemis/web/: __init__.py  app.py  dashboard.py  monitor.py  realtime.py
src/artemis/web/static/: app.js  style.css
src/artemis/web/templates/: dashboard.html  dashboard_v2.html  index.html  terminal.html
src/sentinel/: __init__.py  cli.py  core.py  llm.py
src/sentinel/generators/: __init__.py  base.py  sigma.py  splunk.py  yara.py
src/sentinel/mappings/: __init__.py
tests/: test_kql_generator.py  test_sigma_generator.py  test_snort_generator.py  test_splunk_generator.py  test_yara_generator.py
